--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>ODUN</title>
-    <!-- <script data-token="9CXR94IL6D34" async src="//cdn.splitbee.io/sb.js"></script> -->
+    <script data-token="9CXR94IL6D34" async src="//cdn.splitbee.io/sb.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
