cdn, defer splitbee, linkcss

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <title>ODUN</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer data-token="9CXR94IL6D34" async src="//cdn.splitbee.io/sb.js"></script>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="title" content="ODUN Url Shortener">
@@ -12,9 +17,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="dovenokan">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ODUN</title>
-    <script data-token="9CXR94IL6D34" async src="//cdn.splitbee.io/sb.js"></script>
   </head>
   <body>
     <div id="root"></div>
