google-site-verification

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="author" content="dovenokan">
+    <meta name="google-site-verification" content="MMbW_9FgYX13lbmL1KCm4FNTorPa1xMG2l2x53nI45E" />
   </head>
   <body>
     <div id="root"></div>
